Fixing logo spacing

--- a/_sass/layout/_services.scss
+++ b/_sass/layout/_services.scss
@@ -9,7 +9,7 @@
 
 .service-logo {
   max-width: 60%;
-  margin: 15px 0;
+  margin: 15% 5%;
 }
 .service-heading {
   text-transform: none;
